# edlib-sys

./: Cargo.toml  LICENSE  README.md  build.rs
src/: bindings.rs  lib.rs
