[package]
name = "edlib_sys"
version = "0.2.0"
authors = ["ban-m <banmasutani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A wrapper of edlib for edit distance / Levenshtein distance computation"
repository = "https://github.com/ban-m/edlib-sys"
keywords = ["bioinformatics", "sequence-alignment"]
categories = ["bioinformatics"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
